[package]
name = "managed-thread"
version = "0.0.1"
authors = ["Leon Matthes <leon@matthes.biz>"]
repositor = "https://github.com/mrmodder/managed-thread"
edition = "2018"
readme = "README.md"
keywords = ["thread", "managed", "garbage collection"]
categories = ["concurrency"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
